--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.prx.android.playerhater"
     android:versionCode="1"
-    android:versionName="1.0" > 
+    android:versionName="0.0.1" > 
     <uses-sdk android:minSdkVersion="8" />
+    <application>
+        <service android:name=".PlayerHaterService"></service>
+    </application>
 </manifest>
