--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,6 @@
     android:versionName="0.0.1" > 
     <uses-sdk android:minSdkVersion="8"/>
     <application>
-        <service android:name=".PlayerHaterService"></service>
+        <service android:name=".PlaybackService"></service>
     </application>
 </manifest>
