--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.prx.android.playerhater"
     android:versionCode="1"
-    android:versionName="0.0.1" > 
-    <uses-sdk android:minSdkVersion="8"/>
+    android:versionName="0.0.1" >
+
+    <uses-sdk android:minSdkVersion="9" />
+
     <application>
-        <service android:name=".PlaybackService"></service>
+        <service android:name=".PlaybackService" >
+        </service>
+
+        <receiver android:name=".BroadcastReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
     </application>
+
 </manifest>
