--- a/proguard.cfg
+++ b/proguard.cfg
@@ -38,3 +38,5 @@
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
 }
+
+-keep public class * implements org.prx.android.playerhater.plugins.PlayerHaterPlugin { *; }
