--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ uploadArchives {
       }
         
       pom.project {
-        version '0.3.2'
+        version '0.3.3-SNAPSHOT'
         artifactId 'playerhater'
         groupId 'org.prx'
 
