--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ signing {
 android {
     buildToolsVersion "17"
     compileSdkVersion 16
+
+    defaultConfig {
+      proguardFile 'proguard-player-hater.txt'
+    }
 }
 
 uploadArchives {
