--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ uploadArchives {
       }
         
       pom.project {
-        version '0.3.3-SNAPSHOT'
+        version '0.3.3'
         artifactId 'playerhater'
         groupId 'org.prx'
 
@@ -68,6 +68,7 @@ uploadArchives {
           developer {
             name 'Rebecca Nesson'
             id 'rebeccanesson'
+            email 'rebeccanesson@gmail.com'
             timezone '-5'
             roles {
               role 'developer'
