--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ uploadArchives {
       }
 
       pom.project {
-        version '0.3.6'
+        version '0.3.7-SNAPSHOT'
         artifactId 'playerhater'
         groupId 'org.prx'
 
