--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.prx.playerhater"
     android:versionCode="304"
-    android:versionName="0.3.4" >
+    android:versionName="0.3.7">
 
     <uses-sdk
         android:minSdkVersion="5"
         android:targetSdkVersion="16" />
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <application>
+        <receiver android:name="org.prx.playerhater.BroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+        <service android:name="org.prx.playerhater.PlaybackService" />
+    </application>
 
 </manifest>
